atualização arquivo games

--- a/games.ipynb
+++ b/games.ipynb
@@ -520,11 +520,11 @@
        "Square Enix                       40\n",
        "Tecmo Koei                        37\n",
        "                                  ..\n",
-       "Ice-pick Lodge                     1\n",
-       "Astragon                           1\n",
-       "UFO Interactive                    1\n",
-       "Yacht Club Games                   1\n",
-       "Outright Games                     1\n",
+       "Sinxsoft                           1\n",
+       "3D Realms                          1\n",
+       "Milestone                          1\n",
+       "Rebellion                          1\n",
+       "Nowhere Studios                    1\n",
        "Name: Publicação, Length: 152, dtype: int64"
       ]
      },
@@ -1103,7 +1103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 17,
    "id": "f8e0c7e8",
    "metadata": {},
    "outputs": [
@@ -1205,7 +1205,7 @@
        "2017.0       14896             44.77   57.20   9.08           19.89  130.93"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
