--- a/games.ipynb
+++ b/games.ipynb
@@ -520,11 +520,11 @@
        "Square Enix                       40\n",
        "Tecmo Koei                        37\n",
        "                                  ..\n",
-       "Sinxsoft                           1\n",
-       "3D Realms                          1\n",
-       "Milestone                          1\n",
-       "Rebellion                          1\n",
-       "Nowhere Studios                    1\n",
+       "Gaijinworks                        1\n",
+       "Thekla, Inc.                       1\n",
+       "Alternative Software               1\n",
+       "Versus Evil                        1\n",
+       "Endnight Games LtdÊ                1\n",
        "Name: Publicação, Length: 152, dtype: int64"
       ]
      },
@@ -1217,8 +1217,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
+   "id": "ba1e0dfd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Removendo colunas com valores zerados\n",
+    "analise = analise.loc[(analise['America do Norte'] > 0)\n",
+    "                     & (analise['Europa'] > 0)\n",
+    "                     & (analise['Japão'] > 0)\n",
+    "                     & (analise['Resto do Mundo'] > 0)\n",
+    "                     & (analise['Geral'] > 0)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
    "id": "8afcf0c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[35.9874826147427,\n",
+       " 34.35476909797151,\n",
+       " 36.990081288686696,\n",
+       " 34.90170090567699,\n",
+       " 34.19384403879944,\n",
+       " 39.14342629482069]"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calcular a porcetagem de venda do continente pelo total.\n",
+    "[America / Total * 100 for America, Total in zip( analise['America do Norte'], analise['Geral'])]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e4e46fa",
    "metadata": {},
    "outputs": [],
    "source": []
